# internal/handler/handlers.go
@@ -54,12 +54,10 @@ func (h *Handler) InitRoutes(router *gin.Engine, deviceRepo repository.DeviceRep
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	deviceExists := middleware.DeviceExistsMiddleware(deviceRepo)
 	secure := router.Group("/v1/analytics")
-	//secure.Use(middleware.JWTMiddleware(jwtSecret))
 	secure.Use(middleware.JWTMiddleware(h.JWTSecret))
 	{
-		//time curl -X GET "http://localhost:7002/v1/analytics/device-carriers/source" -H "Authorization: Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJmcm9udGVuZC11c2VyIiwiZXhwIjoxNzQ1NjYyNjcwLCJpYXQiOjE3NDU1NzYyNzB9.Ssv6_u8PyFgMWzvCn6j9cNVGn2HRiGIKe2zNmYnt6W0" -H "Accept: application/json"
+		//time curl -X GET "http://localhost:7002/v1/analytics/calls/1005/stats" -H "Authorization: Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiJmcm9udGVuZC11c2VyIiwiZXhwIjoxNzQ1OTA3MjU1LCJpYXQiOjE3NDU4MjA4NTV9.OikQPvJXQUdDGfvLFjhb34_D2qkJPLR00FaxF6yV9m0" -H "Accept: application/json"
 		//curl -X GET 'https://ms1.calleridreputation.com/v1/sources/list' -H "X-Auth-Key: 4f9c5e8f-2c8b-4f7d-91d8-1a2b3c4d5e6f"
-		//postgres
 		secure.GET("/ping", PingHandler)
 
 		secure.GET("/users/:id", h.UserHandler.GetUserByID)
@@ -71,28 +69,25 @@ func (h *Handler) InitRoutes(router *gin.Engine, deviceRepo repository.DeviceRep
 		secure.GET("/devices", h.DeviceHandler.GetDevices)
 		secure.PATCH("/devices/:id", h.DeviceHandler.UpdateDevice)
 		secure.DELETE("/devices/:id", h.DeviceHandler.DeleteDevice)
+		secure.GET("/devices/stats", h.DeviceHandler.GetDeviceStats)
+		secure.GET("/devices/:id/screenshots", h.DeviceStatsHandler.GetDeviceScreenshots)
 
 		secure.GET("/servers", h.ServerHandler.GetServers)
 		secure.GET("/servers/:id", h.ServerHandler.GetServerByID)
 		secure.PATCH("/servers/:id", h.ServerHandler.UpdateServer)
 		secure.GET("/servers/:id/devices", h.ServerHandler.GetDevices)
-		//secure.GET("/deviceCloudWebhooks", h.DeviceCloudWebhookHandler.GetDeviceCloudWebhooks)
-		//clickhouse
-		secure.GET("/tasks/stats", h.DeviceStatsHandler.GetTaskStats)
-		secure.GET("/devices/:id/call-stats", deviceExists, h.DeviceStatsHandler.GetDeviceCallStats)
-		secure.GET("/devices/stats", h.DeviceHandler.GetDeviceStats)
-		secure.GET("/devices/:id/screenshots", h.DeviceStatsHandler.GetDeviceScreenshots)
 
-		secure.GET("/device-carriers/operator", h.DeviceStatsHandler.GetDeviceCarrierStats)
-		secure.GET("/device-carriers/originating", h.DeviceStatsHandler.GetOriginatingCarrierStats)
-		secure.GET("/device-carriers/group", h.DeviceStatsHandler.GetDeviceGroupStats)
-		//Иммитация
-		secure.GET("/device-carriers/source", h.DeviceStatsHandler.GetSourcesStats)
+		secure.GET("/calls/stats", h.DeviceStatsHandler.GetTaskStats)
+		secure.GET("/calls/:id/stats", deviceExists, h.DeviceStatsHandler.GetDeviceCallStats)
+		secure.GET("/calls/carriers", h.DeviceStatsHandler.GetDeviceCarrierStats)
+		secure.GET("/calls/originating-carriers", h.DeviceStatsHandler.GetOriginatingCarrierStats)
+		secure.GET("/calls/groups", h.DeviceStatsHandler.GetDeviceGroupStats)
+		secure.GET("/calls/sources", h.DeviceStatsHandler.GetSourcesStats)
+		secure.GET("/devices/dedicated/users", h.DeviceStatsHandler.GetByUserID)
+		secure.GET("/calls/users", h.DeviceStatsHandler.GetCountedUsers)
+		secure.GET("/calls/users-today", h.DeviceStatsHandler.GetTodayStats)
+		secure.GET("/calls/user-list", h.UserHandler.GetDCUsers)
 
-		secure.GET("/tasks/group", h.DeviceStatsHandler.GetTasksReadyCounts)
-		secure.GET("/tasks/:id/devices", h.DeviceStatsHandler.GetByUserID)
-		secure.GET("/tasks/users", h.DeviceStatsHandler.GetCountedUsers)
-		secure.GET("/tasks/users-today", h.DeviceStatsHandler.GetTodayStats)
-		secure.GET("/tasks/user-list", h.DeviceStatsHandler.GetDistinctUsers)
+		secure.GET("/tasks/ready", h.DeviceStatsHandler.GetTasksReadyCounts)
 	}
 }
